--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "url_short",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.12.7",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "html-webpack-harddisk-plugin": "^1.0.2",
+    "html-webpack-plugin": "^4.5.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
